force-app/main/default/objects/BMW_Cars__c/BMW_Cars__c.object-meta.xml
<CustomObject>
    <label>BMW Car</label>
    <nameField>
        <displayFormat>CAR-{000000}</displayFormat>
        <label>BMW Cars Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BMW Car</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>