force-app/main/default/objects/BMW_Cars__c/fields/Boot_Space_in_ltrs__c.field-meta.xml
<CustomField>
    <fullName>Boot_Space_in_ltrs__c</fullName>
    <label>Boot Space(in ltrs)</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>