force-app/main/default/objects/BMW_Cars__c/fields/DOB_Formula__c.field-meta.xml
<CustomField>
    <fullName>DOB_Formula__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB Formula</label>
    <type>Date</type>
</CustomField>