force-app/main/default/objects/BMW_Cars__c/fields/Sun_Roof__c.field-meta.xml
<CustomField>
    <fullName>Sun_Roof__c</fullName>
    <inlineHelpText>Helps user in identifying whether car has sun roof or not</inlineHelpText>
    <label>Sun Roof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>