force-app/main/default/objects/BMW_Cars__c/recordTypes/X5_Series.recordType-meta.xml
<RecordType>
    <fullName>X5_Series</fullName>
    <active>true</active>
    <label>X5 Series</label>
</RecordType>