force-app/main/default/objects/BMW_Cars__c/recordTypes/X7_Series.recordType-meta.xml
<RecordType>
    <fullName>X7_Series</fullName>
    <active>true</active>
    <label>X7 Series</label>
</RecordType>